# mass_replace

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  Makefile  Pipfile  README.md  Vagrantfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml
mass_replace/: __init__.py  __version__.py  config.yaml  lorem.txt  mass_replace.py  test_basic.py
mass_replace/docs/: lorem.txt
scripts/: update_reqs.sh
tests/: context.py  test_basic.py
tests/docs/: abc.csv  abc.txt
