[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mass_replace"
author = "Gabriel Gore"
author-email = "gabriel59kg@gmail.com"
home-page = "https://github.com/Kilo59/mass_replace"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 2 - Pre-Alpha",
    ]
requires-python = ">=3.5"
requires = ["pyyaml"]

[tool.flit.scripts]
replace = "mass_replace.__main__:main"
